Fix contrast ratio in code highlighting blocks
TODO: Improve this solution.

This is a temporary solution that works only with the selectors used in
the example's code blocks.

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -270,3 +270,11 @@ footer {
     color:#444;
   }
 }
+
+.highlight {
+  background-color: #fff;
+}
+
+.highlight .c1 {
+  color: #77776a;
+}
